# dccomms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ImageProc/: 01-filtrada.pgm  02-xgradiente.pgm  03-ygradiente.pgm  04-mgradiente.pgm  05-dgradiente.pgm  06-dgradiente-discreta.pgm  07-mgradiente-nonmaximum.pgm  08-bordes.pgm  09-houghSp.pgm  10-houghSpAcc.pgm  Canny.c  Hough.c  README.md  README.txt  arm-join-v1.c  arm-join-v2.c  arm-join-v3.c  arm-join-v4.c  cannycv.cpp  cvmake  hough.py  join.c  lookup.c  lookupTable.h  makefile  noise1.ppm  noise2.ppm  notes.txt  original-gs.pgm  out.pgm  pruebas.c  pruebas.py  salida.ppm  test  test.sh
ImageProc/tests/: cache.sh  (+8 more)
ImageTransmission/: .gitignore  RX.cpp  RX2.cpp  RX_allInOne.cpp  RX_hackrf.cpp  RX_test.cpp  TX.cpp  TX2.cpp  TX3.cpp  TX_allInOne.cpp  TX_allInOne_noArduino.cpp  TX_allInOne_noServer.cpp  TX_dynamic.cpp  TX_dynamic_noArduino.cpp  TX_hackrf.cpp  TX_noArduino.cpp  colorconv.c  compilacionEnBBB.sh  debt.c  decode.c  decode_v2.c  encode.c  encode_2.c  encode_v2.c  fileReceiver.cpp  fileTransmitter.cpp  grabber.c  grabberDebter.c  grabberDebter_dynamic.c  grabberDebter_v2.c  header.c  makefile  makefile.raspi  notes.txt  photoCapture.cpp  ppmVisor.cpp  radioSetup.py  run-video-hackrf.raspi.sh  run-video.sh  run-video.sh.raspi  (+29 more)
Release/: .gitignore  makefile  radio.mk  sources.mk
SeabotixControlInterface/: control.cpp  makefile
doc/: crc.txt  main.c  notes
includes/: Arduino.h  BlockRadioTransmitter.h  Checksum.h  CommsBridge.h  CommsDeviceService.h  CommsException.h  DataLinkFrame.h  DataLinkStream.h  ICommsLink.h  IPhyLayer.h  IPhyLayerService.h  IStream.h  NamedPipeStream.h  PhyLayerServiceV1.h  Radio.h  RadioException.h  SdrRadioPhyLayer.h  SerialPortInterface.h  SerialPortStream.h  Stream.h  TCPStream.h  Utils.h  customtypes.h  tests.h
src/: Arduino.cpp  BlockRadioTransmitter.cpp  Checksum.cpp  CommsBridge.cpp  CommsDevice.cpp  CommsDeviceService.cpp  CommsDeviceSocket.cpp  CommsException.cpp  DataLinkFrame.cpp  DataLinkStream.cpp  ICommsDevice.cpp  ICommsLink.cpp  IPDU.cpp  IPhyLayer.cpp  IPhyLayerService.cpp  IStream.cpp  IStreamCommsDevice.cpp  NamedPipeStream.cpp  Packet.cpp  PhyLayerServiceV1.cpp  RX_PruebasRadio.cpp  Radio.cpp  RadioException.cpp  SdrRadioPhyLayer.cpp  SerialPortInterface.cpp  SerialPortStream.cpp  SerialTransmissionChannel.cpp  Stream.cpp  StreamCommsDevice.cpp  StreamCommsDevice.cpp.autosave  TCPStream.cpp  TX_PruebasRadio.cpp  TransportPDU.cpp  Utils.cpp
(+191 files in other folders)
